--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-hookedup": "^0.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-toastify": "^5.1.0",
