--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "apollo-boost": "^0.4.0",
     "graphql": "^14.3.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-apollo-hooks": "^0.4.5",
     "react-autosize-textarea": "^7.0.0",
